--- a/requirements.txt
+++ b/requirements.txt
@@ -1,469 +1,5 @@
-﻿absl-py==2.1.0
-accelerate==1.6.0
-aiofiles==24.1.0
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-altair==5.5.0
-annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
-anyio==4.6.2.post1
-AnyQt==0.2.0
-argcomplete==3.6.2
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asgiref==3.8.1
-asttokens==3.0.0
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==24.2.0
-babel==2.16.0
-backoff==2.2.1
-baycomp==1.0.3
-bcrypt==4.2.0
-beautifulsoup4==4.12.3
-black==24.8.0
-bleach==6.2.0
-blinker==1.9.0
-blis==1.1.0
-boto3==1.35.64
-botocore==1.35.64
-Bottleneck==1.4.2
-branca==0.8.1
-Brotli==1.1.0
-build==1.2.2.post1
-cachetools==5.5.0
-catalogue==2.0.10
-catboost==1.2.7
-cattrs==24.1.2
-cbor==1.0.0
-certifi==2024.2.2
-cffi==1.17.1
-chardet==3.0.4
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.6
-chromadb==0.5.13
-click==8.1.7
-clip @ git+https://github.com/openai/CLIP.git@dcba3cb2e2827b402d2701e7e1c7d9fed8a20ef1
-cloudpathlib==0.20.0
-cloudpickle==3.0.0
-cmake==3.31.4
-colorama==0.4.6
-coloredlogs==15.0.1
-comm==0.2.2
-commonmark==0.9.1
-confection==0.1.5
-contourpy==1.3.1
-cycler==0.12.1
-cymem==2.0.10
-dacite==1.7.0
-dash==2.18.2
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-datasets==3.2.0
-debugpy==1.8.13
-decorator==5.2.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-dictdiffer==0.9.0
-dill==0.3.8
-dlib==19.24.6
-dnspython==2.7.0
-docutils==0.21.2
-docx==0.2.4
-durationpy==0.9
-einops==0.8.0
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-es_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl#sha256=e451a83d6df79b87e9eed0cb553f03e99e36a3bab18a7b79f0dcfd1fdf875e12
-et-xmlfile==1.1.0
-evaluate==0.4.3
-executing==2.2.0
-face-recognition==1.3.0
-face_recognition_models==0.3.0
-fastapi==0.115.4
-fastjsonschema==2.20.0
-fiftyone==1.4.1
-fiftyone-brain==0.20.1
-fiftyone_db==1.1.7
-filelock==3.16.1
-filetype==1.2.0
-fire==0.7.0
-FlagEmbedding==1.3.4
-Flask==3.0.3
-flatbuffers==24.3.25
-folium==0.19.4
-fonttools==4.55.3
-fqdn==1.5.1
-frozenlist==1.5.0
-fsspec==2024.9.0
-ftfy==6.3.1
-funcy==2.0
-future==1.0.0
-fvcore==0.1.5.post20221221
-gast==0.5.4
-gensim==4.3.3
-gitdb==4.0.11
-GitPython==3.1.43
-gliner==0.2.16
-gliner-spacy==0.0.11
-glob2==0.7
-google-auth==2.35.0
-google-pasta==0.2.0
-googleapis-common-protos==1.65.0
-googletrans==4.0.0rc1
-graphql-core==3.2.6
-graphviz==0.20.3
-grpcio==1.63.0
-h11==0.14.0
-h2==3.2.0
-h5py==3.11.0
-hathitrust-downloader==1.2.1
-hdbscan==0.8.39
-hf-xet==1.1.0
-hpack==3.0.0
-hstspreload==2024.11.1
-httpcore==1.0.7
-httptools==0.6.4
-httpx==0.28.1
-huggingface-hub==0.28.1
-humanfriendly==10.0
-humanize==4.12.2
-hurry.filesize==0.9
-hydra-core==1.3.2
-Hypercorn==0.17.3
-hyperframe==5.2.0
-idna==2.10
-ijson==3.3.0
-imageio==2.34.1
-importlib_metadata==8.4.0
-importlib_resources==6.4.5
-inflate64==1.0.1
-inscriptis==2.5.3
-iopath==0.1.9
-ipykernel==6.29.5
-ipython==9.0.2
-ipython_pygments_lexers==1.1.1
-ipywidgets==8.1.5
-ir_datasets==0.5.9
-isoduration==20.11.0
-itsdangerous==2.2.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-jax==0.4.35
-jaxlib==0.4.35
-jedi==0.19.2
-Jinja2==3.1.5
-jmespath==1.0.1
-joblib==1.4.2
-json5==0.9.25
-jsonlines==4.0.0
-jsonpickle==4.0.2
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
-jupytext==1.16.4
-kaleido==0.2.1
-keras==3.7.0
-keyring==25.6.0
-keyrings.alt==5.0.2
-kiwisolver==1.4.8
-kubernetes==31.0.0
-langcodes==3.5.0
-language_data==1.3.0
-lazy_loader==0.4
-Levenshtein==0.26.1
-libclang==18.1.1
-llvmlite==0.43.0
-lxml==5.3.0
-lz4==4.4.3
-marisa-trie==1.2.1
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.10.0
-matplotlib-inline==0.1.7
-mdit-py-plugins==0.4.2
-mdurl==0.1.2
-mediapipe==0.10.18
-mistune==3.0.2
-ml-dtypes==0.3.2
-mmh3==5.0.1
-mongoengine==0.29.1
-monotonic==1.6
-more-itertools==10.6.0
-motor==3.6.1
-mpmath==1.3.0
-multidict==6.1.0
-multiprocess==0.70.16
-multivolumefile==0.2.3
-murmurhash==1.0.11
-mypy-extensions==1.0.0
-namex==0.0.8
-narwhals==1.22.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.3
-nltk==3.9.1
-notebook==7.2.2
-notebook_shim==0.2.4
-numba==0.60.0
-numexpr==2.10.2
-numpy==1.26.4
-oauthlib==3.2.2
-omegaconf==2.3.0
-onnx==1.17.0
-onnxruntime==1.20.0
-onnxslim==0.1.48
-open_clip_torch==2.30.0
-opencv-contrib-python==4.10.0.84
-opencv-python==4.9.0.80
-opencv-python-headless==4.10.0.84
-openpyxl==3.1.5
-opentelemetry-api==1.27.0
-opentelemetry-exporter-otlp-proto-common==1.27.0
-opentelemetry-exporter-otlp-proto-grpc==1.27.0
-opentelemetry-instrumentation==0.48b0
-opentelemetry-instrumentation-asgi==0.48b0
-opentelemetry-instrumentation-fastapi==0.48b0
-opentelemetry-proto==1.27.0
-opentelemetry-sdk==1.27.0
-opentelemetry-semantic-conventions==0.48b0
-opentelemetry-util-http==0.48b0
-openTSNE==1.0.2
-opt-einsum==3.3.0
-optree==0.11.0
-orange-canvas-core==0.2.5
-orange-widget-base==4.25.1
-Orange3==3.38.1
-orjson==3.10.11
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.2
-pandocfilters==1.5.1
-parso==0.8.4
-pathspec==0.12.1
-pdf2image==1.17.0
-peft==0.14.0
-pikepdf==9.2.1
-pillow==11.1.0
-platformdirs==4.3.7
-plotly==5.24.1
-portalocker==2.10.1
-posthog==3.7.0
-pprintpp==0.4.0
-praw==7.8.1
-prawcore==2.4.0
-preshed==3.0.9
-priority==2.0.0
-prometheus_client==0.21.0
-prompt_toolkit==3.0.50
-propcache==0.2.1
-protobuf==4.25.3
-psutil==7.0.0
-pt_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl#sha256=c304fa04db3af73cd08a250feacf560506e15a2ec2469bd1b09f06847f6b455c
-pure_eval==0.2.3
-py-cpuinfo==9.0.0
-py7zr==0.22.0
-pyarrow==18.1.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-PyAudio==0.2.14
-pybboxes==0.1.6
-pybcj==1.0.3
-pycocotools==2.0.8
-pycparser==2.22
-pycryptodomex==3.22.0
-pydantic==2.9.2
-pydantic_core==2.23.4
-pydash==8.0.5
-pydataset==0.2.0
-pydeck==0.9.1
-pygame==2.6.1
-Pygments==2.18.0
-pyLDAvis==3.4.1
-pymongo==4.9.2
-PyMuPDF==1.24.11
-pynndescent==0.5.13
-pyparsing==3.2.1
-PyPDF2==3.0.1
-pyphen==0.17.0
-PyPika==0.48.9
-pyppmd==1.1.1
-pyproject_hooks==1.2.0
-PyQt5==5.15.10
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.13.0
-pyqtgraph==0.13.7
-pyreadline3==3.5.4
-PySocks==1.7.1
-pytesseract==0.3.13
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-dotenv==1.0.1
-python-json-logger==2.0.7
-python-Levenshtein==0.26.1
-python-louvain==0.16
-python3-wget==0.0.2b1
-pytz==2024.1
-pyvis==0.3.2
-pywin32==310
-pywin32-ctypes==0.2.3
-pywinpty==2.0.14
-PyYAML==6.0.2
-pyzmq==26.3.0
-pyzstd==0.16.2
-qasync==0.27.1
-qtconsole==5.6.1
-QtPy==2.4.3
-RapidFuzz==3.11.0
-rarfile==4.2
-rdflib==7.1.3
-referencing==0.35.1
-regex==2024.9.11
-requests==2.32.3
-requests-cache==1.2.1
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986==1.5.0
-rfc3986-validator==0.1.1
-rich==13.7.1
-roboflow==1.1.49
-rpds-py==0.20.0
-rsa==4.9
-rtree==1.4.0
-s3transfer==0.10.3
-safetensors==0.4.5
-sahi==0.11.18
-scikit-image==0.23.2
-scikit-learn==1.6.1
-scipy==1.13.0
-seaborn==0.13.2
-selenium==4.26.1
-Send2Trash==1.8.3
-sentence-transformers==3.3.1
-sentencepiece==0.2.0
-serverfiles==0.3.1
-setuptools==75.5.0
-shapely==2.0.6
-shellingham==1.5.4
-six==1.17.0
-smart-open==7.0.5
-smmap==5.0.1
-sniffio==1.3.1
-sortedcontainers==2.4.0
-sounddevice==0.5.1
-soupsieve==2.6
-spacy==3.8.3
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SPARQLWrapper==2.0.0
-SpeechRecognition==3.10.4
-srsly==2.5.0
-sse-starlette==0.10.3
-sseclient-py==1.8.0
-stack-data==0.6.3
-starlette==0.41.2
-strawberry-graphql==0.266.0
-streamlit==1.41.1
-streamlit_folium==0.24.0
-svgpathtools==1.6.1
-svgwrite==1.4.3
-sympy==1.13.3
-tabulate==0.9.0
-tenacity==9.0.0
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow-hub==0.16.1
-tensorflow_intel==2.18.0
-termcolor==2.4.0
-terminado==0.18.1
-terminaltables==3.1.10
-tesseract==0.1.3
-textstat==0.7.4
-texttable==1.7.0
-tf_keras==2.18.0
-thinc==8.3.3
-thop==0.1.1.post2209072238
-threadpoolctl==3.5.0
-tifffile==2024.5.10
-timm==1.0.11
-tinycss2==1.4.0
-tokenizers==0.20.1
-toml==0.10.2
-top2vec==1.0.36
-torch==2.4.1
-torchaudio==2.4.1
-torchvision==0.19.1
-tornado==6.4.2
-tqdm==4.66.5
-traitlets==5.14.3
-transformers==4.46.2
-trec-car-tools==2.6
-trio==0.27.0
-trio-websocket==0.11.1
-typer==0.12.5
-types-python-dateutil==2.9.0.20241003
-typing_extensions==4.11.0
-tzdata==2024.1
-tzlocal==5.3.1
-ultralytics==8.3.33
-ultralytics-thop==2.0.11
-umap==0.1.1
-umap-learn==0.5.7
-universal-analytics-python3==1.1.1
-unlzw3==0.2.3
-update-checker==0.18.0
-uri-template==1.3.0
-url-normalize==1.4.3
-urllib3==2.2.1
-uvicorn==0.32.0
-voxel51-eta==0.14.0
-warc3-wet==0.2.5
-warc3-wet-clueweb09==0.2.5
-wasabi==1.1.3
-watchdog==6.0.0
-watchfiles==0.24.0
-wcwidth==0.2.13
-weasel==0.4.1
-webcolors==24.8.0
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==13.1
-Werkzeug==3.0.3
-wheel==0.45.0
-widgetsnbextension==4.0.13
-wordcloud==1.9.4
-wrapt==1.16.0
-wsproto==1.2.0
-xgboost==2.0.3
-xlrd==2.0.1
-XlsxWriter==3.2.2
-xmltodict==0.14.2
-xxhash==3.5.0
-xyzservices==2025.1.0
-yacs==0.1.8
-yarl==1.18.3
-yolov5==7.0.14
-zipp==3.20.2
-zlib-state==0.1.9
+streamlit
+pandas
+numpy
+matplotlib
+Pillow
